{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 9,
  "lineage": "b42590b0-f76d-f357-e8e2-c3f1f286b439",
  "resources": [
    {
      "module": "module.demoinstance_ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "demoinstance_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:067132182484:instance/i-0c3377db1bac42491",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3377db1bac42491",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ba7304fd47f40c5",
            "private_dns": "ip-172-0-1-244.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.1.244",
            "public_ip": "13.233.174.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08ddd334661359f2c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4977ec3c8ccfba8",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0440f9bed2a4092"
            ]
          },
          "dependencies": [
            "module.demoinstance_ec2_module.aws_security_group.demoinstance_sg",
            "module.demokeypair_module.aws_key_pair.demoinstancekp",
            "module.subnet_module.aws_subnet.demo_subnet",
            "module.vpc_module.aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demoinstance_ec2_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demoinstance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:067132182484:security-group/sg-0b0440f9bed2a4092",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0440f9bed2a4092",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230410155831836800000001",
            "name_prefix": "terraform-",
            "owner_id": "067132182484",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-077392481343427b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internetgateway_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:067132182484:internet-gateway/igw-0df9b815e85460c90",
            "id": "igw-0df9b815e85460c90",
            "owner_id": "067132182484",
            "vpc_id": "vpc-077392481343427b6"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internetgateway_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:067132182484:route-table/rtb-0f8f6c012a9aa4ba4",
            "id": "rtb-0f8f6c012a9aa4ba4",
            "owner_id": "067132182484",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df9b815e85460c90",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-077392481343427b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internetgateway_module.aws_internet_gateway.demo_ig",
            "module.vpc_module.aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internetgateway_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo_ig_routetable_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d577cb379ed06179",
            "route_table_id": "rtb-0f8f6c012a9aa4ba4",
            "subnet_id": "subnet-0c4977ec3c8ccfba8"
          },
          "dependencies": [
            "module.internetgateway_module.aws_internet_gateway.demo_ig",
            "module.internetgateway_module.aws_route_table.demo_routetable",
            "module.subnet_module.aws_subnet.demo_subnet",
            "module.vpc_module.aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:067132182484:subnet/subnet-0c4977ec3c8ccfba8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4977ec3c8ccfba8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067132182484",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_subnet"
            },
            "tags_all": {
              "Name": "demo_subnet"
            },
            "vpc_id": "vpc-077392481343427b6"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:067132182484:vpc/vpc-077392481343427b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/16",
            "default_network_acl_id": "acl-0cd6904813766cae2",
            "default_route_table_id": "rtb-030fd7b8e3354d3fc",
            "default_security_group_id": "sg-0af56a002ddb2fe0c",
            "dhcp_options_id": "dopt-035aa6fefe505e5a3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-077392481343427b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030fd7b8e3354d3fc",
            "owner_id": "067132182484",
            "tags": {
              "Name": "demo_vpc"
            },
            "tags_all": {
              "Name": "demo_vpc"
            }
          }
        }
      ]
    }
  ]
}